Sync your Argent Wallet using your Argent ENS. Interact with Dapps

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metamask-crx",
+  "name": "argent-connect-crx",
   "version": "0.0.0",
   "public": false,
   "private": true,
@@ -235,7 +235,7 @@
     "file-loader": "^1.1.11",
     "fs-promise": "^2.0.3",
     "ganache-cli": "^6.1.0",
-    "ganache-core": "^2.1.3",
+    "ganache-core": "^2.1.5",
     "geckodriver": "^1.11.0",
     "gh-pages": "^1.2.0",
     "gifencoder": "^1.1.0",
@@ -271,7 +271,7 @@
     "mocha-jsdom": "^1.1.0",
     "mocha-sinon": "^2.0.0",
     "nock": "^9.0.14",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.2",
     "nsp": "^3.2.1",
     "nyc": "^13.0.0",
     "open": "0.0.5",
